# panel-example

./: .gitignore  app.ipynb  app.py  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: _config.yml  _toc.yml  conf.py  index.ipynb  index.md
docs/examples/: example.ipynb
