[project]
name = "panel-example"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hvplot>=0.12.1",
    "ipykernel>=6.30.1",
    "ipywidgets-bokeh>=1.6.0",
    "ipywidgets>=8.1.7",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "panel>=1.8.1",
    "pyparsing>=3.2.5",
    "watchfiles>=1.1.0",
    #? Docs
    "myst-nb>=1.1.1",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-book-theme>=1.1.3",
    "sphinx-design>=0.6.0",
    "sphinx-thebe>=0.3.1",
    "towncrier>=24.8.0",
]
[tool.uv.pip]
python-version = "3.11"

[tool.ruff]
fix = true
[tool.ruff.lint.isort]
split-on-trailing-comma = false
[tool.ruff.format]
skip-magic-trailing-comma = true
[tool.ruff.lint.extend-per-file-ignores]
"docs/**.ipynb" = [
  "E402", # Need to allow imports below patches in docs notebooks
]
